--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-spring/web": "^9.7.5",
     "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "latest",
+    "@supabase/supabase-js": "^2.49.4",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -19,13 +20,16 @@
     "next": "latest",
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-tinder-card": "^1.6.4",
+    "sonner": "^2.0.2"
   },
   "devDependencies": {
     "@types/node": "22.10.2",
     "@types/react": "^19.0.2",
     "@types/react-dom": "19.0.2",
+    "dotenv": "^16.4.7",
     "postcss": "8.4.49",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.17",
