--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-spring/web": "^9.7.5",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "^2.49.4",
+    "@upstash/workflow": "^0.2.12",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
