--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo=false",
     "build": "next build",
     "start": "next start"
   },
@@ -20,9 +20,11 @@
     "lucide-react": "^0.468.0",
     "next": "latest",
     "next-themes": "^0.4.3",
+    "plaid": "^31.1.0",
     "prettier": "^3.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-plaid-link": "^3.6.1",
     "react-tinder-card": "^1.6.4",
     "sonner": "^2.0.2"
   },
